--- a/composer.json
+++ b/composer.json
@@ -3,17 +3,16 @@
     "name": "laravel/livewire-starter-kit",
     "type": "project",
     "description": "The official Laravel starter kit for Livewire.",
-    "keywords": [
-        "laravel",
-        "framework"
-    ],
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
-        "livewire/volt": "^1.7.0"
+        "livewire/livewire": "^3.6",
+        "livewire/volt": "^1.7.0",
+        "prism-php/prism": "^0.57.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
