--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.0.7",
-        "autoprefixer": "^10.4.20",
+        "alpinejs": "^3.14.9",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
-        "tailwindcss": "^4.0.7",
+        "tailwindcss": "^4.1.2",
         "vite": "^6.0"
     },
     "optionalDependencies": {
